--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,19 @@
 name: 'publish-docker'
 description: 'create, tag and push docker container'
 inputs:
+  
   docker-context:  # id of input
     description: 'Dockerfile location'
     required: false
     default: .
+
+  username:
+    description: 'Name of user for container registry'
+    required: true
+
+  password:
+    description: 'password container registry'
+    required: true
 
 runs:
   using: "composite"
@@ -15,6 +24,7 @@ runs:
           fetch-depth: 0
 
       - name: Get semver 2.0 Version tag
+        shell: bash
         run: |
           TAG=$(docker run --rm -v "$(pwd)":/git-semver mdomke/git-semver -no-meta)
           echo "TAGVERSION=$TAG" >> "$GITHUB_ENV"
@@ -44,8 +54,8 @@ runs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ username }}
+          password: ${{ password }}
       
       - name: Build and push docker immage
         uses: docker/build-push-action@v2
