--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,15 +14,19 @@ on:
 jobs:
   test:
     # Name the Job
-    name: Lint Code Base
+    name: Test action behaviour
     # Set the agent to run on
     runs-on: ubuntu-latest
 
     steps:
       - name: Run publish-docker
+        id: run-publish-docker
         uses: lucenelletenebre/publish-docker@main
         with:
           docker-context: ./test
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
           docker-image:  ghcr.io/lucenelletenebre/test
+
+      - name: Print version number
+        run: echo ${{ steps.run-publish-docker.outputs.version-tag}}
