--- a/action.yml
+++ b/action.yml
@@ -34,10 +34,10 @@ inputs:
     description: 'Password container registry'
     required: true
 
-outputs:
-  version-tag:
-    description: "Generated SemVer tag"
-    value: ${{ env.TAGVERSION }}
+# outputs:
+#   version-tag:
+#     description: "Generated SemVer tag"
+#     value: ${{ env.TAGVERSION }}
 
 runs:
   using: "composite"
