--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           docker-image:  ghcr.io/lucenelletenebre/test
 
-      - name: Print version number
-        run: |
-          MYTAG=${{ steps.run-publish-docker.outputs.version-tag}}
-          echo $MYTAG
+      # - name: Print version number
+      #   run: |
+      #     MYTAG=${{ steps.run-publish-docker.outputs.version-tag}}
+      #     echo $MYTAG
 
       - name: RUN "Hello world" container
-        run: docker run --rm ghcr.io/lucenelletenebre/test:latest
+        run: docker run --rm ghcr.io/lucenelletenebre/test:${{ env.TAGVERSION }}
