test only on linux/amd64 docker

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
           docker-image:  ghcr.io/lucenelletenebre/test
+          docker-platforms: linux/amd64
 
       # - name: Print version number
       #   run: |
