--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,12 @@ name: Test Code Base
 
 on:
   push:
-    branches: [master, main]
-    # branches-ignore: [master, main]
-    # Remove the line above to run when pushing to master
+    branches: 
+      - main
+  
   pull_request:
-    branches: [master, main]
+    branches:
+      - main
 
   workflow_dispatch:
 
@@ -27,7 +28,7 @@ jobs:
           docker-context: ./test
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          docker-image:  ghcr.io/lucenelletenebre/test
+          docker-image: ghcr.io/lucenelletenebre/test
           docker-platforms: linux/amd64
 
       # download the just created and uploaded image
