--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,12 @@ inputs:
   docker-push:
     description: 'Push to docker registry'
     required: false
-    default: true
+    default: "true"
+  
+  docker-load:
+    description: 'load image in local docker images'
+    required: false
+    default: "false"
 
   docker-image:
     description: 'Complete docker image name'
@@ -83,11 +88,31 @@ runs:
         username: ${{ inputs.username }}
         password: ${{ inputs.password }}
     
+    - name: Cache Docker layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
     - name: Build and push docker immage
       uses: docker/build-push-action@v2
       with:
         context: ${{ inputs.docker-context }}
         platforms: ${{ inputs.docker-platforms }} 
         push: ${{ inputs.docker-push }}
+        load: ${{ inputs.docker-load }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+    
+    # Temp fix
+    # https://github.com/docker/build-push-action/issues/252
+    # https://github.com/moby/buildkit/issues/1896
+    - name: Move cache
+      shell: bash
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
